[package]
name = "rust-capstone-project"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust-capstone-project"
path = "rust/src/main.rs"

[[test]]
name = "rust-capstone-project"
path = "test/test.spec.ts"

[dependencies]
bitcoincore-rpc = "0.18"  # Updated to correct package name
bitcoin = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
